@@ -1,0 +1,15 @@
+#! /bin/sh
+
+# Copyright (C) 2010 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+./makejvf $srcdir/tests/min10.tfm rml && \
+  cmp $srcdir/tests/rml.tfm rml.tfm || exit 1
+
+cmp $srcdir/tests/min10.vf min10.vf || :
+
+./makejvf $srcdir/tests/tmin10 rmlv && \
+  cmp $srcdir/tests/rmlv.tfm rmlv.tfm || exit 1
+
+cmp $srcdir/tests/tmin10.vf tmin10.vf || :
+
