@@ -1,3 +1,9 @@
+2010-05-01  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* makejvf.test (new): Shell script for 'make check' test.
+	* tests/[t]min10.{tfm,vf}, tests/rml[v].tfm (new): Test data.
+	* Makefile.am: Adjust.
+
 2010-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* write.c (writevf): Initialize height.  From Sadayuki Tanaka
